--- a/lesson_9/style.css
+++ b/lesson_9/style.css
@@ -34,6 +34,7 @@ main {
   font-size: 42px;
   font-weight: 400;
   letter-spacing: -0.21px;
+  margin-bottom: 39px;
 }
 .section__text::first-letter {
   font-family: var(--font-second);
@@ -42,6 +43,9 @@ main {
   font-weight: 400;
   line-height: 34px;
   text-transform: uppercase;
+  float: left;
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
 .text {
   color: var(--color-black);
