--- a/lesson_11/src/styles/components/_footer.scss
+++ b/lesson_11/src/styles/components/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   @extend %container;
+  height: 1087px;
   background-color: $footer-color;
   display: flex;
   justify-content: space-around;
