--- a/lesson_11/src/styles/components/_navigation.scss
+++ b/lesson_11/src/styles/components/_navigation.scss
@@ -1,11 +1,9 @@
-.header__wrapper {
+.header {
+  @extend %container;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-top: 50px;
-}
-.header {
-  //   @extend %container;
   padding-left: 165px;
   padding-right: 164px;
   margin-bottom: 258px;
@@ -21,14 +19,13 @@
   }
   &__link:hover {
     border-top: 3px solid $orange;
-    // text-decoration: overline;
-    // color: $orange;
   }
+
   &__list {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    transition: all 0.9 ease-in;
+    transition: all 1sec ease-in;
   }
   &__item:not(:last-child) {
     margin-right: 40px;
