--- a/lesson_11/src/styles/core/_vars.scss
+++ b/lesson_11/src/styles/core/_vars.scss
@@ -6,6 +6,6 @@ $btn-color: #ff6033;
 $white: #ffffff;
 $black: #262626;
 $orange: #ff6033;
-$footer-color: #00c4c4;
+$about-color: #00c4c4;
 
 $btn-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
