--- a/lesson_11/src/styles/style.scss
+++ b/lesson_11/src/styles/style.scss
@@ -6,6 +6,6 @@
 @import "./components/navigation";
 @import "./components/section";
 @import "./components/button";
-@import "./components/footer";
+@import "./components/about";
 
 @import "./core/inheritace";
