--- a/lesson_11/src/styles/core/_vars.scss
+++ b/lesson_11/src/styles/core/_vars.scss
@@ -1,11 +1,65 @@
-$base-font: "Raleway", sans-serif;
+// Natural colors
+$white: white;
+$grey-light: #b9b9b9;
+$grey: #9d9d9d;
+$dark: #262626;
+
+// Bacground colors
+$about-bg-color: #00c4c4;
+$service-bg-color: #70bfff;
+$gallery-bg-color: #ffe92f;
+$subscribe-bg-color: white;
+$blog-bg-color: #b07cf7;
+$footer-bg-color: #262626;
+
+// Button colors
+$header-btn-color: #ff6033;
+$gallery-btn-color: #5585a2;
+$subscribe-btn-color: #96b92c;
+$blog-btn-color: #f72b3b;
+
+//Button shadow
+$btn-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+
+// Link color
+$link-border-color: #ff6033;
+
+// Text colors
+$text-main-color: #262626;
+$text-marked-color: #ff2b58;
+
+//Form color
+$input-color: #00c4c4;
+
+@function calcRem($size) {
+  $remSize: $size / 16px;
+  @return #{$remSize}rem;
+}
+
+$logo-fs: calcRem(50px);
+
+$H900: calcRem(90px);
+$H800: calcRem(60px);
+$H700: calcRem(40px);
+$H600: calcRem(32px);
+$H500: calcRem(25px);
+$H400: calcRem(21px);
+$H300: calcRem(20px);
+$H200: calcRem(17px);
+$H100: calcRem(16px);
+$H50: calcRem(15px);
+$H10: calcRem(13px);
+
+$base-font: "Raleway";
+$logo-font: "Pacifico";
 
 $max-width: 1500px;
 
-$btn-color: #ff6033;
-$white: #ffffff;
-$black: #262626;
-$orange: #ff6033;
-$about-color: #00c4c4;
-
-$btn-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+$screen-iphone: 375px;
+$screen-iphone-plus: 414px;
+$screen-tablet: 768px;
+$screen-desktop: 1024px;
+$screen-desktop-large: 1280px;
+$screen-hd: 1366px;
+$screen-fullhd: 1440px;
+$screen-retina: 1660px;
