--- a/lesson_11/src/styles/components/_about.scss
+++ b/lesson_11/src/styles/components/_about.scss
@@ -1,6 +1,7 @@
 .section-about {
   @extend %container;
-  background-color: $about-color;
+  height: 100vh;
+  background-color: $about-bg-color;
   display: flex;
   justify-content: space-around;
   align-items: center;
