--- a/lesson_11/src/styles/components/_button.scss
+++ b/lesson_11/src/styles/components/_button.scss
@@ -1,15 +1,18 @@
 .button {
+  border: none;
   text-decoration: none;
-  background-color: $btn-color;
+  background-color: $header-btn-color;
   box-shadow: $btn-shadow;
-  color: $white;
-  font-size: 20px;
-  font-weight: 300;
-  line-height: 27px;
+  @include text($H300, 300, $white);
+  line-height: 1;
   text-transform: uppercase;
   padding: 20px 25px;
   align-self: start;
-
+  margin-bottom: 491px;
+  width: 100%;
+  @media screen and (min-width: $screen-tablet) {
+    width: fit-content;
+  }
   &__:hover {
     cursor: pointer;
   }
