--- a/lesson_11/src/styles/core/_commons.scss
+++ b/lesson_11/src/styles/core/_commons.scss
@@ -11,3 +11,11 @@ button {
 ul {
   list-style: none;
 }
+.container {
+  padding-left: 24px;
+  padding-right: 24px;
+  @media screen and (min-width: $screen-desktop-large) {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
