--- a/lesson_11/src/styles/style.scss
+++ b/lesson_11/src/styles/style.scss
@@ -1,11 +1,19 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Pacifico&display=swap");
 
 @import "./core/vars"; // переменные
 @import "./core/commons"; //общие стили
+@import "./core/mixins";
 //блоки
+@import "./components/logo";
+@import "./components/header";
 @import "./components/navigation";
-@import "./components/section";
+@import "./components/scroll";
+@import "./components/burger";
 @import "./components/button";
 @import "./components/about";
+@import "./components/contact";
+@import "./components/contact-form";
+@import "./components/footer";
 
 @import "./core/inheritace";
