--- a/lesson_11/src/styles/components/_about.scss
+++ b/lesson_11/src/styles/components/_about.scss
@@ -1,17 +1,12 @@
 .section-about {
-  @extend %container;
+  @extend %section;
   height: 100vh;
   background-color: $about-bg-color;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-image: radial-gradient(
-    circle 1125px at center,
-    rgba(0, 196, 196, 0.9) 0%,
-    rgba(0, 183, 183, 0.9) 32%,
-    rgba(0, 173, 173, 0.9) 68%,
-    rgba(0, 156, 156, 0.9) 100%
-  );
+  &__container {
+    @include flex(space-around, center);
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
 
   &__box {
     display: flex;
