--- a/lesson_11/src/styles/components/_contact-form.scss
+++ b/lesson_11/src/styles/components/_contact-form.scss
@@ -32,3 +32,7 @@ textarea {
   width: 502px;
   background-color: rgba($input-color, 0.5);
 }
+.input ::placeholder {
+  font-size: 24px;
+  color: $white;
+}
