--- a/lesson_11/src/styles/components/_link-card.scss
+++ b/lesson_11/src/styles/components/_link-card.scss
@@ -3,9 +3,15 @@
   min-height: 100px;
   background-color: $white;
   text-decoration: none;
+  transition: all 0.2s ease;
   @include flex(center, center);
+  margin: 0, auto;
   @media screen and (min-width: $screen-desktop) {
     width: 400px;
+  }
+
+  &:hover {
+    box-shadow: 0 2px 5px 0px rgba(black, 0.4);
   }
 
   &__text-wrapper {
@@ -18,6 +24,7 @@
     @include text($H300, 700);
     text-align: center;
     text-transform: capitalize;
+    margin: 0, auto;
   }
 
   &__icon-wrapper {
@@ -26,6 +33,6 @@
   }
 
   &__icon {
-    @include svg(30px, $dark);
+    @include svg(60px, $service-bg-color);
   }
 }
