--- a/lesson_11/src/styles/style.scss
+++ b/lesson_11/src/styles/style.scss
@@ -10,12 +10,14 @@
 @import "./components/common/button";
 @import "./components/common/logo";
 @import "./components/common/scroll";
+@import "./components/common/photo-grid";
 
 //блоки
 @import "./components/header";
 @import "./components/navigation";
 @import "./components/about";
 @import "./components/services";
+@import "./components/section-gallery";
 @import "./components/link-card";
 @import "./components/contact";
 @import "./components/contact-form";
