--- a/lesson_11/src/templates/about.html
+++ b/lesson_11/src/templates/about.html
@@ -1,10 +1,12 @@
 <section id="about" class="section-about">
   <div class="container section-about__container">
-    <img
-      src="./images/raspberries.png"
-      alt="raspberry"
-      class="section-about__image"
-    />
+    <div class="section-about__image-wrapper">
+      <img
+        class="section-about__image"
+        src="./images/raspberries.png"
+        alt="raspberry"
+      />
+    </div>
     <div class="section-about-box">
       <h2 class="section-about__title">About Us</h2>
       <p class="section-about__text">
