--- a/lesson_11/src/templates/contact.html
+++ b/lesson_11/src/templates/contact.html
@@ -1,63 +1,61 @@
-<section class="contact">
-  <div class="container contact__container">
-    <!-- <div class="contact__header"> -->
-      <h2 class="contact__title">Contact</h2>
-      <p class="contact__subtitle">
-        For new projects, ideas, business or anything you'd like to discuss,
-        contact with me!
-      </p>
+<section class="section-contact">
+  <h2 class="section-contact__title">Contact</h2>
+  <p class="section-contact__subtitle">
+    For new projects, ideas, business or anything you'd like to discuss, contact
+    with me!
+  </p>
+  <div class="container section-contact__container">
+    <div class="form-wrapper">
+      <form action="" method="GET" name="user-contact" class="contact-form">
+        <input
+          class="input"
+          type="text"
+          id="user-name"
+          placeholder="Your name..."
+          autofocus
+        /><br />
+        <input
+          class="input"
+          type="email"
+          id="user-email"
+          placeholder="Your email..."
+        /><br />
+        <input
+          class="input"
+          type="number"
+          id="user-phone"
+          placeholder="Your phone number..."
+        /><br />
+        <textarea
+          class="user-message"
+          name="user-contact"
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Your message..."
+        >
+        </textarea>
+      </form>
     </div>
-    <div class="contact-box">
-      <div class="form-wrapper">
-        <form action="" method="GET" name="user-contact" class="contact-form">
-          <input
-            class="input"
-            type="text"
-            id="user-name"
-            placeholder="Your name..."
-            autofocus
-          /><br />
-          <input
-            class="input"
-            type="email"
-            id="user-email"
-            placeholder="Your email..."
-          /><br />
-          <input
-            class="input"
-            type="number"
-            id="user-phone"
-            placeholder="Your phone number..."
-          /><br />
-          <textarea
-            class="user-message"
-            name="user-contact"
-            id=""
-            cols="30"
-            rows="10"
-            placeholder="Your message..."
-          >
-          </textarea>
-        </form>
-      </div>
-      <div class="owner-contact">
-        <ul class="owner-contact list">
-          <li class="owner-contact__item">
-            <h3 class="list__title">ADDRESS</h3>
-            <span class="list__item-addres">
-              123 City name, Street, City, Country</span
-            >
-          </li>
-          <li class="owner-contact__item">
-            <h3 class="list__title">EMAIL</h3>
-            <span class="list__item-email"> cahee@domain.com</span>
-          </li>
-          <li class="owner-contact__item">
-            <h3 class="list__title">PHONE</h3>
-            <span class="list__phone">+012 345 6789</span>
-          </li>
-        </ul>
-      </div>
+
+    <div class="owner">
+      <ul class="owner__list list">
+        <li class="owner__list-item">
+          <h3 class="owner-list__title">ADDRESS</h3>
+          <p class="owner-list__item-addres">
+            123 City name, Street, City, Country
+          </p>
+        </li>
+
+        <li class="owner-list__item">
+          <h3 class="owner-list__title">EMAIL</h3>
+          <p class="owner-list__item-email">cahee@domain.com</p>
+        </li>
+        <li class="owner-list__item">
+          <h3 class="owner-list__title">PHONE</h3>
+          <p class="owner-list__phone">+012 345 6789</p>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
