--- a/lesson_11/src/styles/components/_about.scss
+++ b/lesson_11/src/styles/components/_about.scss
@@ -2,10 +2,14 @@
   @extend %section;
   height: 100vh;
   background-color: $about-bg-color;
+
   &__container {
     @include flex(space-around, center);
     padding-top: 70px;
     padding-bottom: 70px;
+    @media screen and (max-width: $screen-iphone-plus) {
+      flex-direction: column;
+    }
   }
 
   &__box {
@@ -20,6 +24,9 @@
     font-weight: 700;
     line-height: 27px;
     margin-bottom: 34px;
+    @media screen and (max-width: $screen-iphone-plus) {
+      text-align: center;
+    }
   }
 
   &__text {
@@ -29,4 +36,20 @@
     font-weight: 300;
     line-height: 27px;
   }
+  &__image-wrapper {
+    @include padding-hack(calc(50% * 9 / 13)); // position: relative;
+    // @media screen and (max-width: $screen-iphone-plus) {
+    //   @include padding-hack(30%);
+    //   min-height: 100vh;;
+  }
+  //   &__image{
+  //     position: absolute;
+  //     top: 0;
+  //     right: 0;
+  //     bottom: 0;
+  //     left: 0;
+  //     width: 100%;
+  //     height: 100%;
+  //     object-fit: cover;
+  //   }
 }
