--- a/lesson_11/src/styles/components/_owner-contact.scss
+++ b/lesson_11/src/styles/components/_owner-contact.scss
@@ -1,8 +1,6 @@
-.owner-contact {
+.owner-list {
   width: 317px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  @include flex(flex-start);
 
   &__item:not(:last-child) {
     margin-bottom: 30px;
