--- a/lesson_11/src/styles/components/_services.scss
+++ b/lesson_11/src/styles/components/_services.scss
@@ -13,7 +13,7 @@
 
   &__content-side {
     width: 100%;
-    @include flex(center, center, column);
+    @include flex();
     margin-bottom: 32px;
     flex: 1 1;
     @media screen and (min-width: $screen-desktop) {
