--- a/lesson_11/src/styles/components/common/_button.scss
+++ b/lesson_11/src/styles/components/common/_button.scss
@@ -10,10 +10,25 @@
   align-self: start;
   margin-bottom: 491px;
   width: 100%;
+
+  &:hover {
+    cursor: pointer;
+  }
   @media screen and (min-width: $screen-tablet) {
     width: fit-content;
   }
-  &__:hover {
-    cursor: pointer;
+
+  @media screen and (min-width: $screen-desktop) {
+    &:hover {
+      box-shadow: 0 2px 5px 0 rgba(black, 0.5);
+    }
+  }
+
+  &--header {
+    background-color: $header-btn-color;
+  }
+
+  &--gallery {
+    background-color: $gallery-btn-color;
   }
 }
