udate lesson_6.1 lesson_7

--- a/lesson_6.1/style.css
+++ b/lesson_6.1/style.css
@@ -23,9 +23,11 @@ header {
   align-items: center;
   text-align: center;
 }
-.header__list-item:not(first-child) {
+.header__list-item {
   width: 220px;
-  margin-left: 100px;
+}
+.header__list-item:not(:last-child) {
+  margin-right: 100px;
 }
 .header__caption {
   margin-bottom: 22px;
