--- a/lesson_12_1/src/styles/components/_form.scss
+++ b/lesson_12_1/src/styles/components/_form.scss
@@ -8,7 +8,7 @@
 .modal {
   min-width: 400px;
   min-height: 500px;
-  background: url(../../images/form_bg.png),
+  background: url(../images/form_bg.png),
     linear-gradient(32deg, #3023ae 0%, #c86dd7 100%) center center no-repeat;
   box-shadow: 1px 24px 26px -4px rgba(0, 0, 0, 0.61);
   padding-top: 49px;
