--- a/Экзамен/src/css/core/_vars.scss
+++ b/Экзамен/src/css/core/_vars.scss
@@ -1,12 +1,29 @@
 // Colors
-$white: #FFFFFF;
-$light: #FEFEFE;
-$grey-light: #E8E8E8;
-$grey: #CCCCCC;
+$white: #ffffff;
+$light: #fefefe;
+$grey-light: #e8e8e8;
+$grey: #cccccc;
 $dark: #333333;
 $darker: #232323;
-$blue: #5474FD;
+$blue: #5474fd;
 
 // Fonts
-$base-font: 'Aleo', serif;
-$secondary-font: 'Josefin Sans', sans-serif;
+$base-font: "Aleo", serif;
+$secondary-font: "Josefin Sans", sans-serif;
+
+@function calcRem($size) {
+  $remSize: $size / 16px;
+  @return #{$remSize}rem;
+}
+
+$H900: calcRem(90px);
+$H800: calcRem(60px);
+$H700: calcRem(48px);
+$H600: calcRem(36px);
+$H500: calcRem(25px);
+$H400: calcRem(22px);
+$H300: calcRem(20px);
+$H200: calcRem(17px);
+$H100: calcRem(16px);
+$H50: calcRem(15px);
+$H10: calcRem(13px);
