--- a/lesson_11/src/styles/components/_contact.scss
+++ b/lesson_11/src/styles/components/_contact.scss
@@ -7,6 +7,10 @@
   padding-top: 101px;
   padding-bottom: 120px;
 
+  &__header {
+    @include flex(center, center, column);
+  }
+
   &__container {
     // @extend %container;
     @include flex(space-around, flex-start);
