--- a/lesson_31_2/src/css/_content.scss
+++ b/lesson_31_2/src/css/_content.scss
@@ -41,16 +41,16 @@
   }
 
   &__box-buy {
+    padding: 0 30px;
     display: flex;
-    flex: 1;
     height: 230px;
     color: $yellow;
     font-size: 16px;
     line-height: 20px;
   }
   &__box-ratings {
+    padding: 0 30px;
     display: flex;
-    flex: 1;
     height: 230px;
     color: bisque;
     font-style: 22px;
